--- a/src/StalkMarket.css
+++ b/src/StalkMarket.css
@@ -1,9 +1,6 @@
-
-
-
 .background1 {
     background-image: url('https://wallpaperaccess.com/full/164553.png');
-    padding-bottom: 16.7%;
+    padding-bottom: 13%;
 }
 
 body {
@@ -89,7 +86,7 @@ body {
 .bellText {
     position: absolute;
     top: 40%;
-    left: 7.5%;
+    left: 8%;
     transform: translate(-50%, -50%);
     font-size: 6rem;
 }
@@ -97,7 +94,7 @@ body {
 .turnipText {
     position: absolute;
     top: 40%;
-    left: 24%;
+    left: 26.5%;
     transform: translate(-50%, -50%);
     font-size: 6rem;
 }
@@ -108,7 +105,7 @@ button:focus {
 
 /* Media Query For Laptops */
 
-@media only screen and (max-width: 1518px) {
+@media only screen and (max-height: 657px) {
     .logo-font {
         font-family: 'Cute Font', cursive;
         font-size: 5.1rem;
@@ -181,7 +178,7 @@ button:focus {
     .bellText {
         position: absolute;
         top: 40%;
-        left: 5.5%;
+        left: 6%;
         transform: translate(-50%, -50%);
         font-size: 5rem;
     }
@@ -189,7 +186,7 @@ button:focus {
     .turnipText {
         position: absolute;
         top: 40%;
-        left: 20.5%;
+        left: 23%;
         transform: translate(-50%, -50%);
         font-size: 5rem;
     }
