--- a/src/StalkMarket.css
+++ b/src/StalkMarket.css
@@ -195,10 +195,11 @@ button:focus {
   /* Media Query for Mobile */
   @media only screen 
 and (min-device-width : 375px) 
-and (max-device-height : 570px) { 
+and (max-device-width : 667px)
+and (orientation : portrait) { 
     .background1 {
         background-image: url('https://wallpaperaccess.com/full/164553.png');
-        padding-bottom: 61%;
+        padding-bottom: 82%;
         margin-right: -2%;
     }
     .logo-font {
