--- a/src/StalkMarket.css
+++ b/src/StalkMarket.css
@@ -314,14 +314,15 @@ and (orientation : portrait) {
         font-family: 'Cute Font', cursive;
         font-size: 2.5rem;
         text-align: center;
-        margin-top: -20%;
+        margin-top: -18%;
     }
     
     .today {
         font-family: 'Cute Font', cursive;
         font-size: 2rem;
         text-align: center;
-        margin-top: -18%;
+        margin-top: -15%;
+        margin-left: 5%;
     }
     .buyTurnips {
         font-family: 'Cute Font', cursive;
