--- a/src/StalkMarket.css
+++ b/src/StalkMarket.css
@@ -59,7 +59,7 @@ body {
     font-family: 'Cute Font', cursive;
     position: absolute;
     left: 85%;
-    bottom: 37.3%;
+    bottom: 37.5%;
     font-size: 3rem; 
     border: 0.1rem solid black;
 }
@@ -80,7 +80,7 @@ body {
                  0.1rem -0.1rem 0 black,
                 -0.1rem 0.1rem 0 black,
                  0.1rem 0.1rem 0 black;
-    z-index: -1;
+    z-index: 2;
 }
 
 .bellText {
@@ -151,7 +151,7 @@ button:focus {
         font-family: 'Cute Font', cursive;
         position: absolute;
         left: 85%;
-        bottom: 35%;
+        bottom: 35.8%;
         font-size: 2rem; 
         border: 0.1rem solid black;
     }
@@ -169,7 +169,7 @@ button:focus {
                      0.1rem -0.1rem 0 black,
                     -0.1rem 0.1rem 0 black,
                      0.1rem 0.1rem 0 black;
-        z-index: -1;
+        z-index: 1;
     }
     .container img {
         height: 12rem;
@@ -391,6 +391,14 @@ and (orientation : portrait) {
         left: 56%;
         transform: translate(-50%, -50%);
         font-size: 3rem;
+    }
+
+    .startGame {
+        font-Family: 'Cute Font';
+                font-Size: 2rem;
+                position: absolute;
+                top: 65%;
+                border: 0.1rem solid black;
     }
 }
 
